# self-consistent-field

./: .gitignore  1.out  2.out  CMakeLists.txt  Makefile  Makefile.bak  README.md  compile_commands.json  debug.sh  diis.out  ndiis.x  run.sh  run_default.sh  scf.x
.cache/clangd/index/: input_and_md_integrals.cpp.3975C6B0B746676F.idx  input_and_md_integrals.h.9264296417501B31.idx  main.cpp.C9810D431D16377E.idx  matrix.cpp.DB4ACE49CA9EE020.idx  matrix.h.88F5706AB70AB99D.idx  mo.cpp.C9F6B626AE2E7123.idx  mo.h.73DC6A3C554236CE.idx  mur_dav_prim_integrals.cpp.8CB0BB5CD7CC13EE.idx  mur_dav_prim_integrals.h.08EFDBB96AA4038A.idx  rhf.cpp.5BA4773036A63867.idx  rhf.h.304C8757279DB28A.idx  single_basis_function.h.B07944037DFB1828.idx  single_basis_functiton.cpp.CD5478C2DBE7C040.idx  standard_matrices.cpp.138349F9B31C5BC7.idx  standard_matrices.h.D860908D2E59A566.idx  utils.cpp.7D1A29C75C228103.idx  utils.h.9D3C7BA60923E93B.idx
basis/: 6311.basis  cc-pVDZ.basis  cc-pVTZ.basis  ccpvdz.basis
geometry/: ch4.xyz  h2o.xyz
include/: a.out  atom.h  buffer.h  diis.h  input_and_md_integrals.h  input_manager.h  logger.hpp  matrix.h  matrix.hpp  matrix_buffer.h  matrix_new.h  mo.h  mur_dav_prim_integrals.h  output.h  rhf.h  scf.h  single_basis_function.h  standard_matrices.h  test.cpp  utilities.hpp  utils.h
src/: diis.cpp  input_and_md_integrals.cpp  input_manager.cpp  logger.cpp  main.cpp  matrix.cpp  matrix_buffer.cpp  mo.cpp  mur_dav_prim_integrals.cpp  output.cpp  rhf.cpp  scf.cpp  single_basis_functiton.cpp  standard_matrices.cpp  utils.cpp
tests/: test_matrix.cpp  test_new_matrix.cpp
